[gd_scene load_steps=7 format=2]

[ext_resource path="res://DeathMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Buttons/Nochmal.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Nochmal1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Buttons/Hauptmenu.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/Hauptmenu1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Sky.png" type="Texture" id=6]

[node name="DeathMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 133.0
margin_top = 80.0
margin_right = 506.0
margin_bottom = 240.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 373.0
margin_bottom = 14.0
text = "Du bist bis Welt gekommen und hast MÃ¼nzen gesammelt!"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 18.0
margin_right = 373.0
margin_bottom = 32.0

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 36.0
margin_right = 373.0
margin_bottom = 50.0

[node name="Again" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_left = 120.0
margin_top = 54.0
margin_right = 252.0
margin_bottom = 102.0
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 3 )

[node name="MainMenu" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_left = 101.0
margin_top = 106.0
margin_right = 271.0
margin_bottom = 160.0
size_flags_horizontal = 4
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 640, 640 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 6 )
centered = false
[connection signal="pressed" from="CenterContainer/VBoxContainer/Again" to="." method="_on_Again_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
